[package]
name = "serde_aws"
version = "0.1.0"
authors = ["Ivan Leon <i.leonmaldonado@gmail.com>"]
categories = ["encoding", "parser-implementations", "aws"]
description = "A serde implementation for AWS types."
documentation = "https://docs.rs/serde_aws"
edition = "2021"
keywords = ["json", "serde", "serialization", "deserialization", "aws"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ielm/serde_aws"
rust-version = "1.56"


[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-comprehendmedical = "1.28.0"

serde = { version = "1.0.203", features = ["derive"] }
indexmap = { version = "2.2.1", optional = true }
itoa = "1.0"
ryu = "1.0"
